# surrealfs

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  PYTHON.md  README.md  opencode.json  pyproject.toml
.cursor/rules/: surrealdb-rust.mdc
examples/: pydantic_ai_tools.py  python_smoke.py
examples/tool_docs/: README.md  cat.md  cd.md  pwd.md  touch.md
python/surrealfs_ai/: README.md  pyproject.toml
python/surrealfs_ai/src/: __init__.py  tools.py
python/surrealfs_ai/src/tool_docs/: edit.md  mkdir.md  write-file.md
python/surrealfs_ai/surrealfs_ai/: __init__.py  tools.py
python/surrealfs_ai/surrealfs_ai/tool_docs/: README.md  cp.md  generate-image.md  glob.md  ls.md  tail.md
python/surrealfs_ai/surrealfs_ai/tools/: __init__.py  fs.py  images.py
python/surrealfs_py/: pyproject.toml
python/surrealfs_py/tests/: test_python.py
src/: curl.rs  lib.rs  main.rs  python.rs  repl.rs
src/commands/: curl.rs  fs_ops.rs  ls.rs  mod.rs  shell.rs  util.rs
tests/: test_python.py
