[package]
name = "surrealfs"
version = "0.1.0"
edition = "2024"

[dependencies]
surrealdb = { version = "=2.4.1", features = ["kv-mem", "kv-rocksdb"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
regex = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[dev-dependencies]
