[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "surrealfs_py"
version = "0.1.0"
description = "Python bindings for surrealfs, backed by SurrealDB"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
examples = [
    "logfire>=4.20.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=0.8.1",
]

[tool.maturin]
features = ["python"]
module-name = "surrealfs_py"
strip = true

[dependency-groups]
dev = [
    "maturin>=1.11.5",
    "pytest>=8.3.5",
]
