[project]
name = "surrealfs-monorepo"
version = "0.1.0"
description = "Monorepo for SurrealFS tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Martin Schaer", email = "martin.schaer@surrealdb.com" }
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.uv.workspace]
members = ["python/*"]
